freebsd-quota (8.2-1) UNRELEASED; urgency=low

  [ Mats Erik Andersson ]
  * Initial release. (Closes: #611143)

  [ Guillem Jover ]
  * Now using Standards-Version 3.9.2 (no changes needed).

 -- Mats Erik Andersson <mats.andersson@gisladisker.se>  Mon, 28 Feb 2011 18:29:17 +0100