@@ -2,12 +2,13 @@
 
 PATH := /usr/lib/freebsd:$(PATH)
 
+SOURCE = freebsd-quota
 VERSION = $(shell dpkg-parsechangelog | sed -n '/^Version/ {s/.*: //; s/-.*//; p;}')
 SVNLOC = "http://svn.freebsd.org/base/release/$(VERSION).0"
 
 DESTDIR = $(CURDIR)/debian/tmp
-ORIGDIR = freebsd-quota-$(VERSION)
-TARNAME = freebsd-quota_$(VERSION).orig.tar.gz
+ORIGDIR = $(SOURCE)-$(VERSION)
+TARNAME = $(SOURCE)_$(VERSION).orig.tar.gz
 
 CFLAGS = -Wall -g -pipe -fPIC -I. -D_GNU_SOURCE -D'__FBSDID(string)=' -D'__RCSID(string)='
 PMAKE = COPTS="$(CFLAGS)" CFLAGS="$(CFLAGS)" NO_WERROR=1 NOGCCERROR=1 NOSHARED=NO NO_SHARED=NO DESTDIR=$(DESTDIR) make
